<resources>
    <string name="app_name">JourneyPal</string>
    <string name="title_home">Home</string>
    <string name="title_guide">Guide</string>
    <string name="title_storage">Storage</string>
    <string name="title_livealerts">Live Alerts</string>
    <string name="title_camera">Camera</string>
    <string name="title_currency">Currency</string>
    <string name="google_maps_key">AIzaSyDpsrQbrtNUij18rJYryCmptI1jNmzPh3M</string>
    <string name="home_page">Home Page</string>
    <string name="safety_information">Safety Information</string>
    <string name="transgender_non_binary">Transgender/Non-Binary</string>
    <string name="immigrants_refugees">Immigrants/Refugees</string>
    <string name="religious_freedom">Religious Freedom</string>
    <string name="lgbtq">LGBTQ+</string>
    <string name="disabilities">Disabilities</string>
    <string name="women">Women</string>
    <string name="close">Close</string>
    <string name="no_camera_available">No camera available on this device.</string>
    <string name="people_of_colour">People of Colour</string>
    <string name="point_your_camera_at_a_potential_hidden_camera_to_detect">Point your camera at a potential hidden camera to detect.</string>
    <string name="turn_on_flashlight">Turn on Flashlight</string>
    <string name="turn_off_flashlight">Turn off Flashlight</string>
    <string name="storage">Storage</string>
    <string name="title_files" />
    <string name="flashlight" />
    <string name="title_more">More</string>
    <string name="toggle_camera" />
    <string name="flashlight_button" />
    <string name="toggle_camera_button" />
    <string name="switch_camera" />
    <string name="title_translator" >Translate</string>
    <string name="title_emergency">Emergency SOS</string>
    <string name="title_location"> Live Location</string>
    <string name="title_weather">Local Weather</string>
</resources>
