<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.journeypal.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_guide"
        android:name="com.example.journeypal.ui.dashboard.GuideFragment"
        android:label="@string/title_guide"
        tools:layout="@layout/fragment_guide" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.journeypal.ui.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/navigation_storage"
        android:name="com.example.journeypal.ui.storage.LoginFragment"
        android:label="@string/title_storage"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_filesFragment"
            app:destination="@id/navigation_files" />
    </fragment>

    <fragment
        android:id="@+id/navigation_files"
        android:name="com.example.journeypal.ui.storage.FilesFragment"
        android:label="@string/title_files"
        tools:layout="@layout/fragment_files" />

</navigation>
