<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">
    <TextView
        android:id="@+id/text_home"
        android:layout_width="338dp"
        android:layout_height="31dp"
        android:text="@string/home_page"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/filter_women"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/filter_women"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/women"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_home" />

    <CheckBox
        android:id="@+id/filter_people_of_colour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/people_of_colour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_home" />

    <CheckBox
        android:id="@+id/filter_lgbt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lgbtq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.658"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_home" />

    <CheckBox
        android:id="@+id/filter_religious_freedom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/religious_freedom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_lgbt" />

    <CheckBox
        android:id="@+id/filter_immigrants_refugees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Immigrants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_lgbt" />

    <CheckBox
        android:id="@+id/filter_transgender_non_binary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Transgender/ENBY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_disabilities" />

    <CheckBox
        android:id="@+id/filter_disabilities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disabilities"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.964"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_home" />


    <ScrollView
        android:layout_width="306dp"
        android:layout_height="171dp"
        app:layout_constraintBottom_toTopOf="@id/closeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_transgender_non_binary"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/safetyInfoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:scrollbars="vertical"
            android:text="Safety Information will be displayed here" />
    </ScrollView>

    <ImageView
        android:id="@+id/flagImageView"
        android:layout_width="105dp"
        android:layout_height="80dp"
        android:contentDescription="Country Flag"
        app:layout_constraintBottom_toBottomOf="@+id/map_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_religious_freedom"
        app:layout_constraintVertical_bias="0.091" />

    <Button
        android:id="@+id/closeButton"
        android:layout_width="83dp"
        android:layout_height="37dp"
        android:layout_marginTop="4dp"
        android:text="Reset Filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_immigrants_refugees" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map_fragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="406dp"
        android:layout_height="398dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetMapButton"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="NotSibling" />

    <Button
        android:id="@+id/resetMapButton"
        android:layout_width="84dp"
        android:layout_height="37dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_background"
        android:text="Reset Map"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="@+id/map_fragment"
        app:layout_constraintTop_toBottomOf="@+id/closeButton"
        app:layout_constraintVertical_bias="0.175" />

</androidx.constraintlayout.widget.ConstraintLayout>


